--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Layout manager plugin for Irken",
   "main": "index.js",
   "scripts": {
-    "test": "lab -cv"
+    "test": "lab -v"
   },
   "repository": {
     "type": "git",
