--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Layout manager plugin for Irken",
   "main": "index.js",
   "scripts": {
-    "test": "lab -v"
+    "test": "lab -v",
+    "build": "gulp",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -26,7 +28,10 @@
     "irken": "^0.1.0"
   },
   "devDependencies": {
+    "babel": "^4.6.5",
     "code": "^1.3.0",
+    "gulp": "git://github.com/gulpjs/gulp#4.0",
+    "gulp-babel": "^4.0.0",
     "lab": "^5.3.0"
   }
 }
