--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "build": "gulp",
     "prepublish": "npm run build"
   },
+  "files": [
+    "index.js",
+    "LICENSE"
+  ],
   "repository": {
     "type": "git",
     "url": "https://github.com/iceddev/holovisor"
