--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
   "homepage": "https://github.com/iceddev/holovisor",
   "peerDependencies": {
     "react": "^0.12.2",
-    "irken": "^0.1.0"
+    "irken": ">=0.1.0"
   },
   "devDependencies": {
     "babel": "^4.6.5",
