--- a/.eslintrc
+++ b/.eslintrc
@@ -1,4 +1,7 @@
 {
+  "ecmaFeatures": {
+    "jsx": true
+  },
   "rules": {
     "semi": [2, "always"],
     "quotes": [2, "single"],
@@ -6,6 +9,7 @@
     "no-underscore-dangle": 0
   },
   "env": {
+    "es6": true,
     "browser": true,
     "node": true
   }
