--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Layout manager plugin for Irken",
   "main": "index.js",
   "scripts": {
-    "test": "lab -v",
+    "test": "zuul test/ --local --open",
+    "ci": "zuul test/ --phantom",
     "build": "gulp",
     "prepublish": "npm run build"
   },
@@ -33,9 +34,13 @@
   },
   "devDependencies": {
     "babel": "^4.6.5",
-    "code": "^1.3.0",
+    "expect": "^1.6.0",
     "gulp": "git://github.com/gulpjs/gulp#4.0",
     "gulp-babel": "^4.0.0",
-    "lab": "^5.3.0"
+    "irken": "^0.3.0",
+    "mocha": "^2.2.1",
+    "phantomjs": "git://github.com/phated/phantomjs",
+    "react": "^0.13.0",
+    "zuul": "^2.1.1"
   }
 }
